@@ -1,6 +1,8 @@
 18.03.2019
 ==========
 wlancap2wpasec: added man 1 page
+hcxpcaptool: added new option -M to collect IMSI numbers
+-M <file> : output unsorted IMSI number list
 
 
 17.03.2019
